--- a/event.html
+++ b/event.html
@@ -56,7 +56,7 @@
 <main>
   <section>
     <div class="container">
-      <h2 class="section-title">Nutrineer 2025 – Event Registration</h2>
+      <h2 class="section-title"><br>Nutrineer 2025 – Event Registration</h2>
       <div class="event-page-cards about-grid">
         <div class="about-card">
           <h4>Plate-A-Palette (Food Waste Art)</h4>
